--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
   "editor.codeActionsOnSave": {
-    "source.organizeImports": true,
-    "source.fixAll": false
+    "source.organizeImports": "explicit",
+    "source.fixAll": "never"
   },
   "typescript.preferences.importModuleSpecifier": "relative",
   "editor.formatOnSave": true,
